Remove file name in QDir c'tor when calculating relative links

Since the data file name is used as the base url, the QDir should have a
directory used as the path instead.

BUG: 410551
FIXED-IN: 3.2.2